docs(stage-classification): convert index to HAL
